<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.renancsdev.bancocarrefour.ui.activity.detalhe.viewmodel.UsuarioDetalheViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_data_criacao_usuario_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/tv_usuario_dados_data_criacao"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_empresa_usuario_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/tv_usuario_detalhe_empresa"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_data_criacao_usuario_github" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imv_usuario_github"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_usuario_detalhe_descricao"
                    android:scaleType="center"
                    app:layout_constraintBottom_toTopOf="@+id/tv_nome_usuario_github"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_empresa_usuario_github"
                    app:srcCompat="@drawable/ic_user_white" />

                <TextView
                    android:id="@+id/tv_nome_usuario_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tv_usuario_detalhe_nome"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/label_usuario_dados_endereco"
                        android:textColor="@color/texto_preto1"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/ic_location_green" />

                    <TextView
                        android:id="@+id/tv_localizacao_usuario_localizacao"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/tv_usuario_dados_endereco"
                        android:textAlignment="center"
                        android:textColor="@color/texto_preto1"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/btn_detalhe_usuario_repositorio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/tv_usuario_dados_github"
                        android:textColor="@color/texto_preto1"
                        android:textSize="16sp"

                        app:drawableLeftCompat="@drawable/ic_github_black" />

                    <TextView
                        android:id="@+id/tv_git_usuario_github"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/tv_usuario_dados_github"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_detalhe_usuario_repositorio"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/primary"
                    android:drawableLeft="@drawable/ic_eye_white"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/button_usuario_dados_ver_repositorio"
                    android:textSize="20sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="visible">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/ProgressBarStyle"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>