...
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_carrefour_usuarios"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    tools:listitem="@layout/item_list_usuario" />
...
