...
                    android:id="@+id/tv_item_lista_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.2"
                    android:text="@string/label_lista_usuario_login"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_item_lista_usuario" />
            </androidx.constraintlayout.widget.ConstraintLayout>
...
